--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -1,10 +1,6 @@
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
-    <img
-      src="https://primefaces.org/cdn/primeng/images/primeng.svg"
-      height="40"
-      class="mr-2"
-    />
+    <img src="/assets/images/chart-icon-color.png" height="40" class="mr-2" />
   </ng-template>
   <ng-template #menuItemTempalte let-item>
     <a *ngIf="!item.routerLink" [href]="item.url" [target]="item.target">
@@ -12,6 +8,7 @@
       <span>{{ item.label }}</span>
     </a>
   </ng-template>
+
   <ng-template pTemplate="end">
     <input type="text" pInputText placeholder="Search" class="w-full" />
   </ng-template>
