--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -1,15 +1,7 @@
 <div class="container">
   <div class="card flex justify-content-center">
-    <p-fieldset legend="Summary" [toggleable]="true">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
-      </p>
+    <p-fieldset legend="Summary" [toggleable]="true" class="text-center">
+      <code>Total Assets Value: {{ totalValue | currency }}</code>
     </p-fieldset>
   </div>
 
@@ -27,44 +19,5 @@
     <div class="col-7 card g-2">
       <p-chart type="line" [data]="lineData" [options]="lineOptions"></p-chart>
     </div>
-  </div>
-
-  <!-- CANVAS BUTTON -->
-  <div class="row justify-content-center align-items-center text-center">
-    <div class="col-2">
-      <button
-        class="btn btn-primary"
-        type="button"
-        data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasWithBothOptions"
-        aria-controls="offcanvasWithBothOptions"
-      >
-        Show Canvas
-      </button>
-    </div>
-  </div>
-</div>
-
-<!-- CANVAS  -->
-<div
-  class="offcanvas offcanvas-start"
-  data-bs-scroll="true"
-  tabindex="-1"
-  id="offcanvasWithBothOptions"
-  aria-labelledby="offcanvasWithBothOptionsLabel"
->
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
-      Backdroped with scrolling
-    </h5>
-    <button
-      type="button"
-      class="btn-close text-reset"
-      data-bs-dismiss="offcanvas"
-      aria-label="Close"
-    ></button>
-  </div>
-  <div class="offcanvas-body">
-    <p>Try scrolling the rest of the page to see this option in action.</p>
   </div>
 </div>
