--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -8,15 +8,21 @@ html {
 
 body {
   font-family: var(--font-family);
-  background-image: linear-gradient(to bottom right, black, rgb(77, 26, 90));
+  background-image: linear-gradient(to bottom right, black, rgb(24, 89, 109));
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .card {
-  background: var(--surface-card);
+  /* background: var(--surface-card); */
   padding: 2rem;
   border-radius: 10px;
   margin-bottom: 1rem;
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  /* border: 1px solid rgba(255, 255, 255, 0.31);
+  border-radius: 16px; */
 }
