--- a/client/project/src/app/component/investment/investment.component.html
+++ b/client/project/src/app/component/investment/investment.component.html
@@ -1,1 +1,14 @@
-<p>investment works!</p>
+<div class="container">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-8 m-3 text-center">
+      <form [formGroup]="investmentForm">
+        <p-autoComplete
+          formControlName="symbol"
+          [suggestions]="filteredStocks"
+          (completeMethod)="filterStock($event)"
+          field="symbol"
+        ></p-autoComplete>
+      </form>
+    </div>
+  </div>
+</div>
