--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="card flex justify-content-center">
-    <p-fieldset legend="Summary" [toggleable]="true" class="text-center">
+    <p-fieldset
+      inputId="ac1"
+      legend="Summary"
+      [toggleable]="true"
+      class="text-center"
+    >
       <code>Total Assets Value: {{ totalValue | currency }}</code>
     </p-fieldset>
   </div>
