configure stock api, refactor login page

--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -6,7 +6,11 @@
       [toggleable]="true"
       class="text-center"
     >
-      <code>Total Assets Value: {{ totalValue | currency }}</code>
+      <h3>
+        Total Assets Value
+        <span class="pi pi-angle-right" style="font-size: 1.5rem"></span>
+        {{ totalValue | currency }}
+      </h3>
     </p-fieldset>
   </div>
 
