--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+  <div class="row justify-content-center m-3">
+    <div class="col-4 text-center">
+      <img [src]="imgSrc" [className]="imgClass" alt="" srcset="" />
+    </div>
+  </div>
   <div class="row justify-content-center m-5">
     <div class="col-4 text-center">
       <form [formGroup]="form" (submit)="login()">
@@ -6,7 +11,12 @@
           <span class="p-inputgroup-addon">
             <i class="pi pi-user"></i>
           </span>
-          <input pInputText placeholder="Username" formControlName="username" />
+          <input
+            pInputText
+            placeholder="Username"
+            formControlName="username"
+            (click)="resetImg()"
+          />
         </div>
         <!-- <div class="p-inputgroup">
           <span class="p-inputgroup-addon">
