--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "primeicons/primeicons.css";
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@300;700&family=Press+Start+2P&family=Righteous&display=swap");
 
 html {
   font-size: 14px;
@@ -25,4 +26,38 @@ body {
   -webkit-backdrop-filter: blur(5px);
   /* border: 1px solid rgba(255, 255, 255, 0.31);
   border-radius: 16px; */
+}
+
+.user-img {
+}
+
+.p-fieldset-legend-text {
+  font-family: "Righteous", cursive;
+  font-weight: lighter;
+}
+
+.user-img-shake {
+  animation: shake 1s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
