--- a/client/project/src/app/component/investment/investment.component.html
+++ b/client/project/src/app/component/investment/investment.component.html
@@ -128,7 +128,7 @@
                 pRipple
                 label="Cancel"
                 icon="pi pi-times"
-                [routerLink]="'/dashboard'"
+                [routerLink]="'/investment-dashboard'"
               ></button>
             </span>
           </div>
