--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -9,7 +9,13 @@ html {
 
 body {
   font-family: var(--font-family);
-  background-image: linear-gradient(to bottom right, black, rgb(24, 89, 109));
+  /* background-image: linear-gradient(to bottom right, rgb(24, 89, 109), black); */
+  background: rgb(63, 94, 251);
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
