--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -14,3 +14,16 @@ h1 {
   /* border: 1px solid rgba(255, 255, 255, 0.31);
     border-radius: 16px; */
 }
+
+.diplay-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px outset white;
+  border-radius: 10px;
+}
+
+.diplay-flex:hover {
+  cursor: pointer;
+}
