--- a/client/project/src/app/component/login/login.component.css
+++ b/client/project/src/app/component/login/login.component.css
@@ -7,3 +7,7 @@
   background: rgba(255, 255, 255, 0.13);
   box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
 }
+
+h2 {
+  font-family: "Righteous", cursive;
+}
