--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -3,44 +3,49 @@
     <div class="col-4 text-center">
       <img [src]="imgSrc" [className]="imgClass" alt="" srcset="" />
     </div>
-  </div>
-  <div class="row justify-content-center m-5">
-    <div class="col-4 text-center">
-      <form [formGroup]="form" (submit)="login()">
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">
-            <i class="pi pi-user"></i>
-          </span>
-          <input
-            pInputText
-            placeholder="Username"
-            formControlName="username"
-            (click)="resetImg()"
-          />
-        </div>
-        <!-- <div class="p-inputgroup">
+    <div class="row justify-content-center m-2">
+      <div class="col-6 text-center">
+        <h2>{{ loginTitle }}</h2>
+      </div>
+    </div>
+    <div class="row justify-content-center m-3">
+      <div class="col-4 text-center">
+        <form [formGroup]="form" (submit)="login()">
+          <div class="p-inputgroup">
+            <span class="p-inputgroup-addon">
+              <i class="pi pi-user"></i>
+            </span>
+            <input
+              pInputText
+              placeholder="Username"
+              formControlName="username"
+              (click)="resetLoginPage()"
+            />
+          </div>
+          <!-- <div class="p-inputgroup">
           <span class="p-inputgroup-addon">
             <i class="pi pi-user"></i>
           </span>
         </div> -->
-        <p-password
-          id="pwd"
-          formControlName="password"
-          placeholder="Password"
-          [toggleMask]="true"
-        ></p-password>
+          <p-password
+            id="pwd"
+            formControlName="password"
+            placeholder="Password"
+            [toggleMask]="true"
+          ></p-password>
 
-        <button
-          class="mt-3 ms-3"
-          type="submit"
-          pButton
-          [disabled]="form.invalid"
-        >
-          Login
-        </button>
-      </form>
+          <button
+            class="mt-3 ms-3"
+            type="submit"
+            pButton
+            [disabled]="form.invalid"
+          >
+            Login
+          </button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 
-<p-toast></p-toast>
+  <p-toast></p-toast>
+</div>
