--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -67,3 +67,9 @@ body {
     transform: translateX(0);
   }
 }
+
+.surface-ground {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  background-color: rgb(22, 29, 33);
+}
