sort stock on market value, login into local db

--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -14,3 +14,11 @@ h1 {
   /* border: 1px solid rgba(255, 255, 255, 0.31);
     border-radius: 16px; */
 }
+
+.positive {
+  color: lightgreen;
+}
+
+.negative {
+  color: lightcoral;
+}
