--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -22,3 +22,16 @@ h1 {
 .negative {
   color: lightcoral;
 }
+
+.chartcard {
+  /* background: var(--surface-card); */
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  /* border: 1px solid rgba(255, 255, 255, 0.31);
+  border-radius: 16px; */
+}
