--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -3,56 +3,76 @@
     <div class="col-8 text-center my-5 h1card">
       <h1>Investment Dashbooard</h1>
     </div>
-    <div class="row justify-content-evenly align-items-center">
-      <div class="col-4 text-center my-2">
-        <p-orderList
-          [value]="stocksCount"
-          [listStyle]="{ 'max-height': '30rem' }"
-          header="Stocks"
-          filterBy="symbol"
-          filterPlaceholder="Filter by symbol"
-        >
-          <ng-template let-stock pTemplate="item">
-            <div class="flex align-items-center p-2 w-full flex-wrap">
-              <div class="w-full text-center lg:w-auto lg:text-left">
-                <i class="pi pi-tag vertical-align-middle mr-2"></i>
-                <span class="vertical-align-middle line-height-1">{{
-                  stock.symbol
-                }}</span>
-              </div>
-              <div class="flex-1">
-                <h5 class="mb-2">
-                  {{ stock.name }}
-                </h5>
-                <h5 class="mb-2">
-                  {{ stock.marketPrice | currency }}
-                  <span [className]="getPerformanceClass(stock.performance)">
-                    ({{ stock.performance | percent : "1.2-2" }})
-                  </span>
-                </h5>
-              </div>
-              <div class="flex flex-column align-items-end">
-                <h6 class="mb-2 text-muted">
-                  {{ stock.cost | currency }} | {{ stock.quantity }}
-                </h6>
-                <!-- <p-tag
-                  [value]="product.inventoryStatus"
-                  [severity]="getSeverity(product.inventoryStatus)"
-                ></p-tag> -->
-              </div>
-            </div>
-          </ng-template>
-        </p-orderList>
-      </div>
 
-      <!-- LINE CHART -->
-      <div class="col-7 card g-2">
-        <p-chart
-          type="line"
-          [data]="lineData"
-          [options]="lineOptions"
-        ></p-chart>
-      </div>
-    </div>
+    <p-tabView>
+      <!-- STOCKS -->
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <i class="pi pi-apple"></i>
+          <span class="mx-2">Stocks</span>
+        </ng-template>
+        <div class="row justify-content-evenly align-items-center">
+          <div class="col-4 text-center my-2">
+            <p-orderList
+              [value]="stocksCount"
+              [listStyle]="{ 'max-height': '30rem' }"
+              header="Stocks"
+              filterBy="symbol"
+              filterPlaceholder="Filter by symbol"
+            >
+              <ng-template let-stock pTemplate="item">
+                <div class="flex align-items-center p-2 w-full flex-wrap">
+                  <div class="w-full text-center lg:w-auto lg:text-left">
+                    <i class="pi pi-tag vertical-align-middle mr-2"></i>
+                    <span class="vertical-align-middle line-height-1">{{
+                      stock.symbol
+                    }}</span>
+                  </div>
+                  <div class="flex-1">
+                    <h5 class="mb-2">
+                      {{ stock.name }}
+                    </h5>
+                    <h5 class="mb-2">
+                      {{ stock.marketPrice | currency }}
+                      <span
+                        [className]="getPerformanceClass(stock.performance)"
+                      >
+                        ({{ stock.performance | percent : "1.2-2" }})
+                      </span>
+                    </h5>
+                  </div>
+                  <div class="flex flex-column align-items-end">
+                    <h6 class="mb-2 text-muted">
+                      {{ stock.cost | currency }} | {{ stock.quantity }}
+                    </h6>
+                    <!-- <p-tag
+                      [value]="product.inventoryStatus"
+                      [severity]="getSeverity(product.inventoryStatus)"
+                    ></p-tag> -->
+                  </div>
+                </div>
+              </ng-template>
+            </p-orderList>
+          </div>
+
+          <!-- LINE CHART -->
+          <div class="col-7 chartcard g-2">
+            <p-chart
+              type="line"
+              [data]="lineData"
+              [options]="lineOptions"
+            ></p-chart>
+          </div>
+        </div>
+      </p-tabPanel>
+
+      <!-- CRYPTO -->
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <i class="pi pi-bitcoin"></i>
+          <span class="mx-2">Crypto</span>
+        </ng-template>
+      </p-tabPanel>
+    </p-tabView>
   </div>
 </div>
