--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -35,3 +35,15 @@ h1 {
   /* border: 1px solid rgba(255, 255, 255, 0.31);
   border-radius: 16px; */
 }
+
+td,
+th {
+  text-align: center !important;
+}
+
+.stock-card {
+  background: var(--surface-card);
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
