--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -64,6 +64,94 @@
             ></p-chart>
           </div>
         </div>
+
+        <div
+          class="row justify-content-center align-items-center m-5 stock-card"
+        >
+          <p-table
+            #dt1
+            [value]="stocks"
+            [paginator]="true"
+            [loading]="loading"
+            [rows]="5"
+            [showCurrentPageReport]="true"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [rowsPerPageOptions]="[5, 10, 15]"
+            [globalFilterFields]="['symbol', 'name', 'quantity', 'date']"
+          >
+            <ng-template pTemplate="caption">
+              <div class="d-flex justify-content-between">
+                <button
+                  pButton
+                  label="Clear"
+                  class="p-button-outlined"
+                  icon="pi pi-filter-slash"
+                  (click)="clear(dt1)"
+                ></button>
+                <span class="p-input-icon-left ml-auto">
+                  <i class="pi pi-search"></i>
+                  <input
+                    #input1
+                    pInputText
+                    type="text"
+                    (input)="dt1.filterGlobal(input1.value, 'contains')"
+                    placeholder="Search keyword"
+                  />
+                </span>
+              </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="width: 14.3%">
+                  Symbol
+                  <p-columnFilter
+                    type="text"
+                    field="symbol"
+                    display="menu"
+                  ></p-columnFilter>
+                </th>
+                <th style="width: 14.3%">Name</th>
+                <th style="width: 14.3%" pSortableColumn="date">
+                  Purchase Date <p-sortIcon field="date"></p-sortIcon>
+                </th>
+                <th style="width: 14.3%" pSortableColumn="quantity">
+                  Quantity <p-sortIcon field="percentage"></p-sortIcon>
+                </th>
+                <th style="width: 14.3%">Strike Price</th>
+                <th style="width: 14.3%">Market Price</th>
+                <th style="width: 14.3%" pSortableColumn="percentage">
+                  % Change <p-sortIcon field="percentage"></p-sortIcon>
+                </th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-stock>
+              <tr>
+                <td>{{ stock.symbol }}</td>
+                <td>{{ stock.name }}</td>
+                <td>{{ stock.date | date }}</td>
+                <td>{{ stock.quantity }}</td>
+                <td>{{ stock.price | currency }}</td>
+                <td>{{ stock.marketPrice | currency }}</td>
+                <td>{{ stock.percentage | percent : "1.2-2" }}</td>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorleft">
+              <p-button
+                type="button"
+                icon="pi pi-plus"
+                styleClass="p-button-text"
+              ></p-button>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+              <p-button
+                type="button"
+                icon="pi pi-cloud"
+                styleClass="p-button-text"
+              ></p-button>
+            </ng-template>
+          </p-table>
+        </div>
       </p-tabPanel>
 
       <!-- CRYPTO -->
