--- a/client/project/src/app/component/sell-stock/sell-stock.component.html
+++ b/client/project/src/app/component/sell-stock/sell-stock.component.html
@@ -1,21 +1,34 @@
-<div class="container mt-5">
+<div class="container">
   <div class="row justify-content-center align-items-center">
-    <div class="col-8 m-3 text-center">
-      <form [formGroup]="investmentForm" (submit)="addStock()">
+    <div class="col-10 m-3 text-center">
+      <form [formGroup]="form" (submit)="sellStock()">
         <div class="row justify-content-center align-items-center">
           <div class="col-8 text-center">
             <div class="ncard flex justify-content-center">
               <span class="p-float-label">
-                <p-autoComplete
+                <input
+                  type="text"
+                  pInputText
+                  [readOnly]="true"
                   formControlName="symbol"
-                  [suggestions]="filteredStocksSymbol"
-                  (completeMethod)="filterStock($event)"
-                  [forceSelection]="true"
-                  placeholder="stock symbol"
-                  (onSelect)="onSelectStock($event)"
-                ></p-autoComplete>
-
+                />
                 <label htmlFor="symbol">Symbol</label>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center align-items-center">
+          <div class="col-8 text-center">
+            <div class="ncard flex justify-content-center">
+              <span class="p-float-label">
+                <input
+                  type="text"
+                  pInputText
+                  [readOnly]="true"
+                  formControlName="name"
+                />
+                <label htmlFor="name">Name</label>
               </span>
             </div>
           </div>
@@ -72,9 +85,6 @@
               <span class="p-float-label">
                 <p-calendar
                   formControlName="date"
-                  [touchUI]="true"
-                  [readonlyInput]="true"
-                  [showButtonBar]="true"
                   [showIcon]="true"
                   [maxDate]="maxDate"
                   dateFormat="dd-mm-yy"
@@ -111,33 +121,16 @@
 
         <div class="row justify-content-center align-items-center my-3">
           <div class="col-8 text-center">
-            <span class="p-buttonset">
-              <button
-                pButton
-                pRipple
-                label="Save"
-                icon="pi pi-check"
-                [disabled]="investmentForm.invalid"
-              ></button>
-              <button
-                pButton
-                pRipple
-                label="Clear"
-                icon="pi pi-trash"
-                (click)="clearForm()"
-              ></button>
-              <button
-                pButton
-                pRipple
-                label="Cancel"
-                icon="pi pi-times"
-                [routerLink]="'/investment-dashboard'"
-              ></button>
-            </span>
+            <button
+              pButton
+              pRipple
+              label="Confirm"
+              icon="pi pi-check"
+              [disabled]="form.invalid"
+            ></button>
           </div>
         </div>
       </form>
     </div>
   </div>
-  <p-toast></p-toast>
 </div>
