--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -9,13 +9,17 @@ html {
 
 body {
   font-family: var(--font-family);
-  /* background-image: linear-gradient(to bottom right, rgb(24, 89, 109), black); */
-  background: rgb(63, 94, 251);
-  background: radial-gradient(
-    circle,
-    rgba(63, 94, 251, 1) 0%,
-    rgba(252, 70, 107, 1) 100%
+  /* background-image: linear-gradient(to bottom right, rgb(33, 124, 151), black);
+  background-size: 400% 400%; */
+  background: rgb(238, 232, 174);
+  background: linear-gradient(
+    90deg,
+    rgba(238, 232, 174, 1) 0%,
+    rgba(148, 154, 233, 1) 100%
   );
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite; */
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -34,12 +38,35 @@ body {
   border-radius: 16px; */
 }
 
-.user-img {
-}
-
 .p-fieldset-legend-text {
   font-family: "Righteous", cursive;
   font-weight: lighter;
+}
+
+.p-tabview .p-tabview-panels {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.p-dialog .p-dialog-header {
+  border-bottom: 0 none;
+  background: rgba(0, 0, 0, 0.9);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  color: rgba(255, 255, 255, 0.87);
+  padding: 1.25rem;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.p-dialog .p-dialog-content {
+  background: rgba(0, 0, 0, 0.9);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  color: rgba(255, 255, 255, 0.87);
+  padding: 0 1.25rem 1.25rem 1.25rem;
 }
 
 .user-img-shake {
@@ -67,3 +94,48 @@ body {
     transform: translateX(0);
   }
 }
+
+/* @keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+} */
+
+/* .bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: 0.5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  animation-duration: 5s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(25%);
+  }
+} */
