stock image to mongo

--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card flex justify-content-center">
+  <div class="dashboardcard flex justify-content-center">
     <p-fieldset
       inputId="ac1"
       legend="Summary"
