--- a/client/project/src/app/component/dashboard/dashboard.component.css
+++ b/client/project/src/app/component/dashboard/dashboard.component.css
@@ -12,3 +12,16 @@ h3 {
   padding: 1.5rem;
   border-radius: 6px;
 }
+
+.dashboardcard {
+  background: var(--surface-card);
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  /* background: rgba(255, 255, 255, 0.13); */
+  /* box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px); */
+  /* border: 1px solid rgba(255, 255, 255, 0.31);
+  border-radius: 16px; */
+}
