--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -23,10 +23,20 @@
               <ng-template let-stock pTemplate="item">
                 <div class="flex align-items-center p-2 w-full flex-wrap">
                   <div class="w-full text-center lg:w-auto lg:text-left">
-                    <i class="pi pi-tag vertical-align-middle mr-2"></i>
-                    <span class="vertical-align-middle line-height-1">{{
-                      stock.symbol
-                    }}</span>
+                    <span class="vertical-align-middle line-height-1">
+                      <span
+                        class="d-flex justify-content-center align-items-center"
+                      >
+                        <p-avatar
+                          [image]="stock.logo"
+                          styleClass="mr-2"
+                          shape="circle"
+                        ></p-avatar>
+                        <span class="ms-2">
+                          {{ stock.symbol }}
+                        </span>
+                      </span>
+                    </span>
                   </div>
                   <div class="flex-1">
                     <h5 class="mb-2">
@@ -65,6 +75,7 @@
           </div>
         </div>
 
+        <p-divider></p-divider>
         <div
           class="row justify-content-center align-items-center m-5 stock-card"
         >
@@ -128,7 +139,20 @@
             </ng-template>
             <ng-template pTemplate="body" let-stock>
               <tr>
-                <td>{{ stock.symbol }}</td>
+                <td>
+                  <span
+                    class="d-flex justify-content-evenly align-items-center"
+                  >
+                    <p-avatar
+                      [image]="stock.logo"
+                      styleClass="mr-2"
+                      shape="circle"
+                    ></p-avatar>
+                    <span>
+                      {{ stock.symbol }}
+                    </span>
+                  </span>
+                </td>
                 <td>{{ stock.name }}</td>
                 <td>{{ stock.date | date }}</td>
                 <td>{{ stock.quantity }}</td>
