server calculate user monthly performance

--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -2,6 +2,10 @@ h1 {
   font-family: "Press Start 2P", cursive;
 }
 
+.h3-font {
+  font-family: "Righteous", cursive;
+}
+
 .h1card {
   /* background: var(--surface-card); */
   padding: 2rem;
