--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -8,15 +8,31 @@
       <!-- STOCKS -->
       <p-tabPanel>
         <ng-template pTemplate="header">
-          <i class="pi pi-apple"></i>
-          <span class="mx-2">Stocks</span>
+          <!-- <i class="pi pi-apple"></i> -->
+          <span class="mx-2">Overview</span>
         </ng-template>
+
+        <div class="row justify-content-evenly align-items-center">
+          <div class="col-10 d-flex justify-content-center h3-font">
+            <h2>
+              Unrealized Profit :
+              {{ unrealizedProfit | currency : "USD" : "code" }}
+            </h2>
+            <span class="d-flex align-items-center ms-2">
+              <p-button
+                icon="pi pi-eye"
+                styleClass="p-button-rounded p-button-secondary p-button-text p-button-lg"
+                (onClick)="hideProfit($event)"
+              ></p-button>
+            </span>
+          </div>
+        </div>
+
         <div class="row justify-content-evenly align-items-center">
           <div class="col-4 text-center my-2">
             <p-orderList
               [value]="stocksCount"
               [listStyle]="{ 'max-height': '30rem' }"
-              header="Stocks"
               filterBy="symbol"
               filterPlaceholder="Filter by symbol"
             >
@@ -79,6 +95,9 @@
         <div
           class="row justify-content-center align-items-center m-5 stock-card"
         >
+          <div class="col-10 d-flex justify-content-center h3-font">
+            <h3>Portfolio Stocks</h3>
+          </div>
           <p-table
             #dt1
             [value]="stocks"
@@ -207,9 +226,138 @@
       <!-- CRYPTO -->
       <p-tabPanel>
         <ng-template pTemplate="header">
-          <i class="pi pi-bitcoin"></i>
-          <span class="mx-2">Crypto</span>
+          <!-- <i class="pi pi-bitcoin"></i> -->
+          <span class="mx-2">History</span>
         </ng-template>
+        <div
+          class="row justify-content-center align-items-center m-5 stock-card"
+        >
+          <div class="col-10 d-flex justify-content-center h3-font">
+            <h3>Stock Transactions</h3>
+          </div>
+          <p-table
+            #dt2
+            [value]="soldStocks"
+            [paginator]="true"
+            [loading]="loading"
+            [rows]="5"
+            [showCurrentPageReport]="true"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [rowsPerPageOptions]="[5, 10, 15]"
+            [globalFilterFields]="['symbol', 'name', 'quantity', 'date']"
+          >
+            <ng-template pTemplate="caption">
+              <div class="d-flex justify-content-between">
+                <button
+                  pButton
+                  label="Clear"
+                  class="p-button-outlined"
+                  icon="pi pi-filter-slash"
+                  (click)="clear(dt2)"
+                ></button>
+                <span class="p-input-icon-left ml-auto">
+                  <i class="pi pi-search"></i>
+                  <input
+                    #input2
+                    pInputText
+                    type="text"
+                    (input)="dt2.filterGlobal(input2.value, 'contains')"
+                    placeholder="Search keyword"
+                  />
+                </span>
+              </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="width: 14.3%">
+                  Symbol
+                  <p-columnFilter
+                    type="text"
+                    field="symbol"
+                    display="menu"
+                  ></p-columnFilter>
+                </th>
+                <th style="width: 14.3%">Name</th>
+                <th style="width: 14.3%" pSortableColumn="date">
+                  Sold Date <p-sortIcon field="date"></p-sortIcon>
+                </th>
+                <th style="width: 14.3%" pSortableColumn="quantity">
+                  Quantity <p-sortIcon field="percentage"></p-sortIcon>
+                </th>
+                <th style="width: 14.3%">Sold Price</th>
+                <th style="width: 14.3%">Net Profit</th>
+                <th style="width: 14.3%" pSortableColumn="percentage">
+                  % ROI <p-sortIcon field="percentage"></p-sortIcon>
+                </th>
+                <!-- <th style="width: 14%">Action</th> -->
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-stock>
+              <tr>
+                <td>
+                  <span
+                    class="d-flex justify-content-evenly align-items-center"
+                  >
+                    <p-avatar
+                      [image]="stock.logo"
+                      styleClass="mr-2"
+                      shape="circle"
+                    ></p-avatar>
+                    <span>
+                      {{ stock.symbol }}
+                    </span>
+                  </span>
+                </td>
+                <td>{{ stock.name }}</td>
+                <td>{{ stock.date | date }}</td>
+                <td>{{ stock.quantity }}</td>
+                <td>{{ stock.price | currency }}</td>
+                <td>{{ stock.netProfit | currency }}</td>
+                <td [className]="getPerformanceClass(stock.percentage)">
+                  {{ stock.percentage | percent : "1.2-2" }}
+                </td>
+                <!-- <td>
+                  <span class="me-2">
+                    <p-confirmPopup></p-confirmPopup>
+                    <p-button
+                      icon="pi pi-trash"
+                      type="button"
+                      styleClass="p-button-rounded p-button-danger"
+                      (onClick)="
+                        confirmDelete($event, stock.purchaseId, stock.symbol)
+                      "
+                    ></p-button>
+                  </span>
+                  <span class="ms-1">
+                    <p-button
+                      label="Sell"
+                      type="button"
+                      styleClass="p-button-rounded p-button-success"
+                      (onClick)="sellStock(stock)"
+                    ></p-button>
+                  </span>
+                </td> -->
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorleft">
+              <p-button
+                type="button"
+                icon="pi pi-plus"
+                styleClass="p-button-text"
+                [routerLink]="'/investment'"
+              ></p-button>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+              <p-button
+                type="button"
+                icon="pi pi-refresh"
+                styleClass="p-button-text"
+                (onClick)="refreshSoldStockTable()"
+              ></p-button>
+            </ng-template>
+          </p-table>
+        </div>
       </p-tabPanel>
     </p-tabView>
   </div>
