export service & total stock value

--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -52,7 +52,9 @@ th {
   margin-bottom: 1rem;
 }
 
-#dummy-unrealized-profit {
+#dummy-unrealized-profit,
+#dummy-realized-profit,
+#dummy-unrealized-value {
   display: none;
 }
 
