--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -12,17 +12,17 @@
           <span class="mx-2">Overview</span>
         </ng-template>
 
-        <div class="row justify-content-evenly align-items-center">
-          <div
-            class="col-10 d-flex justify-content-center h3-font"
-            id="unrealized-profit-row"
-          >
+        <div
+          class="row justify-content-evenly align-items-center"
+          id="unrealized-profit-row"
+        >
+          <div class="col-10 d-flex justify-content-center h3-font">
             <h2>
-              Unrealized P&L :
-              <span id="unrealized-profit">
-                {{ unrealizedProfit | currency : "USD" : "code" }}
+              Total Stock Value :
+              <span id="unrealized-market-value">
+                {{ totalStockMarketValue | currency : "USD" : "code" }}
               </span>
-              <span id="dummy-unrealized-profit"> ----</span>
+              <span id="dummy-unrealized-value">----</span>
             </h2>
             <span class="d-flex align-items-center ms-2">
               <p-button
@@ -38,6 +38,20 @@
                 (onClick)="hideProfit()"
               ></p-button>
             </span>
+          </div>
+          <div class="row justify-content-evenly align-items-center">
+            <div class="col-10 d-flex justify-content-center h3-font">
+              <h3>
+                Unrealized P&L :
+                <span
+                  id="unrealized-profit"
+                  [className]="getProfitColorClass(unrealizedProfit)"
+                >
+                  {{ unrealizedProfit | currency : "USD" : "code" }}
+                </span>
+                <span id="dummy-unrealized-profit"> ----</span>
+              </h3>
+            </div>
           </div>
         </div>
 
@@ -105,14 +119,18 @@
         </div>
 
         <p-divider></p-divider>
+
+        <!-- PORTFOLIO TABLE -->
         <div
           class="row justify-content-center align-items-center m-5 stock-card"
         >
-          <div class="col-10 d-flex justify-content-center h3-font">
+          <div class="col-12 d-flex justify-content-center h3-font">
             <h3>Portfolio Stocks</h3>
           </div>
           <p-table
+            id="dt1"
             #dt1
+            [columns]="portfolioTableCols"
             [value]="stocks"
             [paginator]="true"
             [loading]="loading"
@@ -120,29 +138,63 @@
             [showCurrentPageReport]="true"
             [tableStyle]="{ 'min-width': '50rem' }"
             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-            [rowsPerPageOptions]="[5, 10, 15]"
+            [rowsPerPageOptions]="[5, 10, 15, 50, 100]"
             [globalFilterFields]="['symbol', 'name', 'quantity', 'date']"
           >
             <ng-template pTemplate="caption">
               <div class="d-flex justify-content-between">
-                <button
-                  pButton
-                  label="Clear"
-                  class="p-button-outlined"
-                  icon="pi pi-filter-slash"
-                  (click)="clear(dt1)"
-                ></button>
-                <span class="p-input-icon-left ml-auto">
-                  <i class="pi pi-search"></i>
-                  <input
-                    id="input1"
-                    #input1
-                    pInputText
-                    type="text"
-                    (input)="dt1.filterGlobal(input1.value, 'contains')"
-                    placeholder="Search keyword"
-                  />
-                </span>
+                <div>
+                  <button
+                    type="button"
+                    pButton
+                    pRipple
+                    icon="pi pi-file"
+                    (click)="dt1.exportCSV()"
+                    class="export-buttons"
+                    pTooltip="CSV"
+                    tooltipPosition="bottom"
+                  ></button>
+                  <button
+                    type="button"
+                    pButton
+                    pRipple
+                    icon="pi pi-file-excel"
+                    (click)="exportExcelPortfolio()"
+                    class="p-button-success export-buttons"
+                    pTooltip="XLS"
+                    tooltipPosition="bottom"
+                  ></button>
+                  <button
+                    type="button"
+                    pButton
+                    pRipple
+                    icon="pi pi-file-pdf"
+                    (click)="exportPdfPortfolio()"
+                    class="p-button-danger export-buttons"
+                    pTooltip="PDF"
+                    tooltipPosition="bottom"
+                  ></button>
+                </div>
+                <div>
+                  <button
+                    pButton
+                    label="Clear"
+                    class="p-button-outlined"
+                    icon="pi pi-filter-slash"
+                    (click)="clear(dt1)"
+                  ></button>
+                  <span class="p-input-icon-left ml-auto">
+                    <i class="pi pi-search"></i>
+                    <input
+                      id="input1"
+                      #input1
+                      pInputText
+                      type="text"
+                      (input)="dt1.filterGlobal(input1.value, 'contains')"
+                      placeholder="Search keyword"
+                    />
+                  </span>
+                </div>
               </div>
             </ng-template>
             <ng-template pTemplate="header">
@@ -157,7 +209,7 @@
                 </th>
                 <th style="width: 12.5%">Name</th>
                 <th style="width: 12.5%" pSortableColumn="date">
-                  Purchase Date <p-sortIcon field="date"></p-sortIcon>
+                  Purchased Date <p-sortIcon field="date"></p-sortIcon>
                 </th>
                 <th style="width: 12%" pSortableColumn="quantity">
                   Quantity <p-sortIcon field="percentage"></p-sortIcon>
@@ -249,10 +301,13 @@
           >
             <h2>
               Realized P&L :
-              <span id="unrealized-profit">
+              <span
+                id="realized-profit"
+                [className]="getProfitColorClass(realizedProfit)"
+              >
                 {{ realizedProfit | currency : "USD" : "code" }}
               </span>
-              <span id="dummy-unrealized-profit"> ----</span>
+              <span id="dummy-realized-profit">----</span>
             </h2>
             <span class="d-flex align-items-center ms-2">
               <p-button
@@ -279,7 +334,7 @@
           <p-table
             id="dt2"
             #dt2
-            [columns]="cols"
+            [columns]="soldTableCols"
             [value]="soldStocks"
             [paginator]="true"
             [loading]="loading"
@@ -287,7 +342,7 @@
             [showCurrentPageReport]="true"
             [tableStyle]="{ 'min-width': '50rem' }"
             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-            [rowsPerPageOptions]="[10, 15, 20]"
+            [rowsPerPageOptions]="[10, 15, 20, 50, 100]"
             [globalFilterFields]="['symbol', 'name', 'quantity', 'date']"
             [exportHeader]="'customExportHeader'"
           >
@@ -309,7 +364,7 @@
                     pButton
                     pRipple
                     icon="pi pi-file-excel"
-                    (click)="exportExcel()"
+                    (click)="exportExcelSoldStocks()"
                     class="p-button-success export-buttons"
                     pTooltip="XLS"
                     tooltipPosition="bottom"
@@ -319,7 +374,7 @@
                     pButton
                     pRipple
                     icon="pi pi-file-pdf"
-                    (click)="exportPdf()"
+                    (click)="exportPdfSoldStocks()"
                     class="p-button-danger export-buttons"
                     pTooltip="PDF"
                     tooltipPosition="bottom"
