--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -38,6 +38,10 @@ body {
   border-radius: 16px; */
 }
 
+.p-button-label {
+  font-weight: 500 !important;
+}
+
 .p-fieldset-legend-text {
   font-family: "Righteous", cursive;
   font-weight: lighter;
